# ml

./: .gitignore  data_exploration.ipynb  modeling.ipynb  project_notebook.ipynb  project_notebook_v2.ipynb  project_notebook_v2_data_prep.ipynb  project_notebook_v2_training.ipynb  project_notebook_v2_visuals.ipynb  project_notebook_v3.ipynb  pyproject.toml  test_idx.npy  train_idx.npy
artifacts/: feature_lists.json
