[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "notebook>=7.6.0",
]
